syntax = "proto3";

package gantrycd.bff.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
// import "validate/validate.Protobuf";
// import "Protobufc-gen-openapiv2/options/annotations.Protobuf";

option go_package = "github.com/gantrycd/backend/api/proto/bff/v1";

service BffService {
  rpc GetOrg(google.protobuf.Empty) returns (HomeResponse){
    option (google.api.http) = {
      get: "/organizations"
    };
  }
  rpc GetRepositoryApps(GetRepositoryAppsRequest) returns (GetRepositoryAppsResponse){
    option (google.api.http) = {
      get: "/organizations/{organization}/repositories"
    };
  }

  rpc GetBranchInfo(GetBranchInfoRequest) returns (GetBranchInfoResponse){
    option (google.api.http) = {
      get: "/organizations/{organization}/repositories/{repository}/information"
    };
  }
}

message HomeResponse {
  repeated OrganizationInfos organizationInfos = 1;
}

message GetRepositoryAppsRequest{
  string organization = 1;
}

message GetRepositoryAppsResponse{
  repeated Repositories repositories = 1;
  repeated Apps apps = 2;
}

message GetBranchInfoRequest{
  string organization = 1;
  string repository = 2;
}

message GetBranchInfoResponse{
  string yaml = 1;
}

message OrganizationInfos{
  string organization  = 1;
  repeated string repositories  = 2;
}

message Repositories{
  string repository  = 1;
  int32  deployments = 2;
}

message Apps{
  string name = 1;
  string status = 2;
  string version = 3;
  string age = 4;
}